# cancer-diagnosis-classification

./: .env.example  .gitignore  Dockerfile  README.md  dagshub_integration.py  dvc.yaml  init_dagshub.py  metrics.json  pyproject.toml  requirements.txt  run_demo.py  run_integration.py  setup_and_test.sh  test_mlflow_dvc.py
.dvc/: config
api/: Dockerfile  client.py  main.py
config/: default_config.yaml  params.yaml  test_config.yaml
scripts/: create_dummy_model.py  predict.py  train.py  train_with_mlflow.py
src/data/: dataset.py
src/evaluation/: metrics.py
src/models/: cnn_classifier.py
src/preprocessing/: transforms.py
src/training/: trainer.py  trainer_mlflow.py
src/utils/: config.py  dvc_mlflow_utils.py  mlflow_utils.py  utils.py
src/visualization/: visualize.py
tests/: test_api.py  test_api_simple.py  test_dataset.py  test_integration.py  test_models.py  test_preprocessing.py  test_utils.py
